--- a/src/scss/mobile/_layout.scss
+++ b/src/scss/mobile/_layout.scss
@@ -2,6 +2,8 @@
 @use '../components' as c;
 @forward '../layout';
  
- @media (min-width: 480px) {
-
+ @media (max-width: 599px) {
+         .logo{
+             @include b.logo(24px);
+         }
 }
