--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -61,7 +61,8 @@
                  -6px -6px 12px #ffebc1;
     cursor: pointer;
     & a{
-        font-size: 24px;
+        font-size: 20px;
+        letter-spacing: 1px;
         text-decoration: none;
         color: b.$white;
         font-family: b.$font1;
@@ -82,4 +83,38 @@
     background-color: b.$tertiary;
     margin-bottom: 70px;
 }
+}
+
+.card{
+    @include b.flex;
+    flex-direction: column;
+    @include b.bg(80vw, 45vh);
+    margin-bottom: 70px;
+    .bg{
+        position: relative;
+        width: 70px;
+        height: 70px;
+        background-color: b.$white;
+        border-radius: 41% 59% 23% 77% / 59% 54% 46% 41%; 
+        & .icon{
+          position: absolute;
+          width:35px;
+          height: 35px;
+          top: 50%;
+          left: 50%;  
+          transform: translate(-50%, -50%);
+        }
+    }
+    .apply-title{
+        @include b.title(24px);
+        letter-spacing: 2.5px;
+        margin: 40px 0 30px 0;
+    }
+    .apply-p{
+        @include b.description(18px);
+        padding: 0 20px;
+        text-align: center;
+        line-height: 1.5rem;
+    }
+   
 }
