--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,7 +12,7 @@ body {
   z-index: 500;
   top: 4%;
   right: 6%;
-  width: 60px;
+  width: 50px;
   height: 40px;
   border-radius: 15px;
   background: linear-gradient(145deg, #faf0e4, #d3cac0);
@@ -55,6 +55,7 @@ body {
 }
 
 .btn {
+  position: relative;
   width: 180px;
   height: 45px;
   border: none;
@@ -69,6 +70,13 @@ body {
   text-decoration: none;
   color: #ffff;
   font-family: "Baloo 2", cursive;
+}
+.btn:hover {
+  background: #EAE0D5;
+  box-shadow: inset 10px 10px 12px #a69f97, inset -10px -10px 12px #ffffff;
+}
+.btn:hover a {
+  color: #5E503F;
 }
 
 .titles {
@@ -105,12 +113,18 @@ body {
   box-shadow: 13px 13px 26px #d3cac0, -13px -13px 26px #fff6ea;
   margin-bottom: 70px;
 }
+.card:nth-child(3) {
+  margin-bottom: 10px;
+}
 .card .bg {
   position: relative;
   width: 70px;
   height: 70px;
   background-color: #ffff;
   border-radius: 41% 59% 23% 77%/59% 54% 46% 41%;
+}
+.card .bg:nth-child(1) {
+  margin-top: 15px;
 }
 .card .bg .icon {
   position: absolute;
@@ -138,10 +152,13 @@ body {
   text-align: center;
   line-height: 1.5rem;
 }
+.card .apply-p:nth-child(1) {
+  font-size: 16px;
+}
 
 .logo {
   margin: 10px 20px;
-  font-size: 36px;
+  font-size: 24px;
   font-family: "Baloo 2", cursive;
   font-weight: lighter;
 }
@@ -187,7 +204,7 @@ body {
 }
 
 .hero.container {
-  margin: 80px auto 0;
+  margin: 60px auto 0;
   width: 80vw;
   height: 70vh;
   background-color: #EAE0D5;
@@ -258,10 +275,10 @@ body {
   margin-top: 5px;
 }
 .left .img img, .right .img img {
-  width: 80%;
+  width: 90%;
   height: auto;
   max-width: 280px;
-  border-radius: 10px;
+  border-radius: 83% 17% 73% 27%/25% 46% 54% 75%;
 }
 .left .feature-head, .right .feature-head {
   font-size: 24px;
@@ -292,6 +309,7 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  margin-bottom: 80px;
 }
 .get-card .img {
   display: flex;
@@ -307,10 +325,11 @@ body {
   flex-direction: column;
 }
 .get-card .img img {
-  width: 80%;
+  width: 90%;
   height: auto;
   max-width: 280px;
   border-radius: 10px;
+  border-radius: 61% 39% 28% 72%/24% 59% 41% 76%;
 }
 .get-card .form-head {
   font-size: 18px;
@@ -338,6 +357,54 @@ body {
   color: #ffff;
   font-family: "Baloo 2", cursive;
   margin-top: 30px;
+}
+.get-card .btn:hover {
+  background: #EAE0D5;
+  box-shadow: inset 10px 10px 12px #a69f97, inset -10px -10px 12px #ffffff;
+  color: #5E503F;
+}
+
+#contact {
+  background-color: #EAE0D5;
+  text-align: center;
+  clip-path: polygon(51% 0, 100% 13%, 100% 100%, 0 100%, 0 13%);
+}
+#contact .container {
+  height: 300px;
+  width: 100vw;
+  width: 80vw;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  justify-content: space-around;
+}
+#contact .container .logo {
+  margin: 25px 0;
+  font-size: 30px;
+}
+#contact .container .footer-p {
+  font-size: 15px;
+  font-family: "Baloo 2", cursive;
+  font-weight: bold;
+  color: #5E503F;
+}
+#contact .container .social {
+  width: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-content: space-around;
+}
+#contact .container .social .icon {
+  cursor: pointer;
+  fill: #5E503F;
+}
+#contact .container .copy {
+  font-size: 10px;
+  color: #5E503F;
+  font-family: "Roboto", sans-serif;
 }
 
 @media (min-width: 480px) {
