--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -6,7 +6,7 @@
     z-index: 500;
     top: 4%;
     right: 6%;
-    width: 60px;
+    width: 50px;
     height: 40px;
     border-radius: 15px;
     background: linear-gradient(145deg, #faf0e4, #d3cac0);
@@ -52,6 +52,7 @@
 
 
 .btn{
+    position: relative;
     width: 180px;
     height: 45px;
     border: none;
@@ -66,6 +67,14 @@
         text-decoration: none;
         color: b.$white;
         font-family: b.$font1;
+    }
+    &:hover{
+        background: #EAE0D5;
+        box-shadow: inset 10px 10px 12px #a69f97,
+                    inset -10px -10px 12px #ffffff;
+        & a{
+        color: b.$secondary;
+        }
     }
 }
 
@@ -91,12 +100,18 @@
     flex-direction: column;
     @include b.bg(80vw, 50vh);
     margin-bottom: 70px;
+    &:nth-child(3){
+        margin-bottom: 10px;
+    }
     .bg{
         position: relative;
         width: 70px;
         height: 70px;
         background-color: b.$white;
         border-radius: 41% 59% 23% 77% / 59% 54% 46% 41%; 
+        &:nth-child(1){
+            margin-top: 15px;
+        }
         & .icon{
           position: absolute;
           width:35px;
@@ -117,6 +132,9 @@
         padding: 0 20px;
         text-align: center;
         line-height: 1.5rem;
+        &:nth-child(1){
+            font-size: 16px;
+        }
     }
    
 }
