--- a/src/css/style.css
+++ b/src/css/style.css
@@ -65,7 +65,7 @@ body {
   cursor: pointer;
 }
 .btn a {
-  font-size: 20px;
+  font-size: 16px;
   letter-spacing: 1px;
   text-decoration: none;
   color: #ffff;
@@ -106,15 +106,12 @@ body {
   justify-content: center;
   flex-direction: column;
   width: 80vw;
-  height: 50vh;
+  height: 40vh;
   background-color: #EAE0D5;
   border-radius: 21px;
   background: #EAE0D5;
   box-shadow: 13px 13px 26px #d3cac0, -13px -13px 26px #fff6ea;
   margin-bottom: 70px;
-}
-.card:nth-child(3) {
-  margin-bottom: 10px;
 }
 .card .bg {
   position: relative;
@@ -122,9 +119,6 @@ body {
   height: 70px;
   background-color: #ffff;
   border-radius: 41% 59% 23% 77%/59% 54% 46% 41%;
-}
-.card .bg:nth-child(1) {
-  margin-top: 15px;
 }
 .card .bg .icon {
   position: absolute;
@@ -136,7 +130,7 @@ body {
   fill: #5E503F;
 }
 .card .apply-title {
-  font-size: 24px;
+  font-size: 23px;
   font-family: "Baloo 2", cursive;
   font-weight: bold;
   color: #5E503F;
@@ -144,7 +138,7 @@ body {
   margin: 40px 0 30px 0;
 }
 .card .apply-p {
-  font-size: 18px;
+  font-size: 16px;
   font-family: "Roboto", sans-serif;
   color: #5E503F;
   font-weight: 280;
@@ -175,8 +169,8 @@ body {
   justify-content: space-around;
   align-items: center;
   overflow: hidden;
-  transform: translateY(-10%);
-  transition: all cubic-bezier(0.165, 0.84, 0.44, 1) 0.7s;
+  transform: translateY(-20%);
+  transition: all cubic-bezier(0.215, 0.61, 0.355, 1) 0.5s;
   border-radius: 15px;
   box-shadow: 6px 6px 12px #d5ccc2, -6px -6px 12px #fff4e8;
 }
@@ -194,8 +188,9 @@ body {
   color: #5E503F;
   text-decoration: none;
   font-family: "Roboto", sans-serif;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: lighter;
+  letter-spacing: 1.2px;
   cursor: pointer;
 }
 .nav_list.open {
@@ -241,18 +236,22 @@ body {
   margin-bottom: 25px;
 }
 
-#feature, #apply, #form {
+#feature,
+#apply,
+#form {
   width: 80vw;
   margin: 0 auto;
 }
 
-.left, .right {
+.left,
+.right {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
 }
-.left .img, .right .img {
+.left .img,
+.right .img {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -265,35 +264,41 @@ body {
   margin-bottom: 40px;
   flex-direction: column;
 }
-.left .img:nth-child(1), .right .img:nth-child(1) {
+.left .img:nth-child(1),
+.right .img:nth-child(1) {
   margin-top: 60px;
 }
-.left .img p, .right .img p {
+.left .img p,
+.right .img p {
   color: #ffff;
   font-family: "Roboto", sans-serif;
   font-size: 10px;
   margin-top: 5px;
 }
-.left .img img, .right .img img {
+.left .img img,
+.right .img img {
   width: 90%;
   height: auto;
   max-width: 280px;
   border-radius: 83% 17% 73% 27%/25% 46% 54% 75%;
 }
-.left .feature-head, .right .feature-head {
+.left .feature-head,
+.right .feature-head {
   font-size: 24px;
   font-family: "Baloo 2", cursive;
   font-weight: bold;
   color: #5E503F;
   margin-bottom: 20px;
 }
-.left .feature-p, .right .feature-p {
+.left .feature-p,
+.right .feature-p {
   font-size: 18px;
   font-family: "Roboto", sans-serif;
   color: #5E503F;
   font-weight: 280;
 }
-.left .btn, .right .btn {
+.left .btn,
+.right .btn {
   margin-top: 50px;
 }
 
@@ -351,7 +356,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 20px;
+  font-size: 16px;
   letter-spacing: 1px;
   text-decoration: none;
   color: #ffff;
@@ -406,14 +411,95 @@ body {
   color: #5E503F;
   font-family: "Roboto", sans-serif;
 }
+#contact .container .btn {
+  width: 150px;
+  height: 30px;
+}
+#contact .container .btn a {
+  font-size: 12px;
+}
 
 @media (min-width: 480px) {
   .logo {
-    font-size: 24px;
+    font-size: 28px;
     font-family: "Baloo 2", cursive;
     font-weight: lighter;
   }
+
+  .card {
+    width: 70vw;
+  }
+  .card .apply-p {
+    font-size: 18px;
+  }
 }
+@media (min-width: 600px) {
+  .hero.container {
+    width: 80vw;
+    height: 90vh;
+    background-color: #EAE0D5;
+    border-radius: 21px;
+    background: #EAE0D5;
+    box-shadow: 13px 13px 26px #d3cac0, -13px -13px 26px #fff6ea;
+    margin: 50px auto 0;
+  }
+  .hero.container .head-title {
+    font-size: 40px;
+  }
+  .hero.container .head-p {
+    margin-top: 10px;
+    font-size: 20px;
+  }
+}
+#feature,
+#apply,
+#form {
+  width: 70vw;
+}
+
+.left .img,
+.right .img,
+.get-card .img {
+  width: 70vw;
+  height: 40vh;
+  background-color: #EAE0D5;
+  border-radius: 21px;
+  background: #EAE0D5;
+  box-shadow: 13px 13px 26px #d3cac0, -13px -13px 26px #fff6ea;
+}
+.left .img img,
+.right .img img,
+.get-card .img img {
+  max-width: 350px;
+}
+.left p,
+.right p,
+.get-card p {
+  margin: 30px 0;
+}
+
+.card {
+  width: 50vw;
+  height: 50vh;
+  background-color: #EAE0D5;
+  border-radius: 21px;
+  background: #EAE0D5;
+  box-shadow: 13px 13px 26px #d3cac0, -13px -13px 26px #fff6ea;
+}
+.card .apply-p {
+  width: 70%;
+}
+
+.titles .title {
+  font-size: 35px;
+  font-family: "Baloo 2", cursive;
+  font-weight: bold;
+  color: #5E503F;
+}
+.titles .title-line {
+  width: 100px;
+}
+
 @media (min-width: 1280px) {
   .logo {
     font-size: 36px;
