--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -18,8 +18,8 @@
     justify-content: space-around;
     align-items: center;
     overflow: hidden;
-    transform: translateY(-10%);
-    transition: all cubic-bezier(0.165, 0.84, 0.44, 1) .7s;
+    transform: translateY(-20%);
+    transition: all cubic-bezier(0.215, 0.610, 0.355, 1) .5s;
     border-radius: 15px;
     box-shadow: 6px 6px 12px #d5ccc2,
         -6px -6px 12px #fff4e8;
@@ -40,8 +40,9 @@
         color: b.$secondary;
         text-decoration: none;
         font-family: b.$font2;
-        font-size: 18px;
+        font-size: 16px;
         font-weight: lighter;
+        letter-spacing: 1.2px;
         cursor: pointer;
     }
 
@@ -82,11 +83,14 @@
     }
 }
 
-#feature, #apply, #form{
+#feature,
+#apply,
+#form {
     @include b.center;
 }
 
-.left, .right{
+.left,
+.right {
     @include b.flex;
     flex-direction: column;
 
@@ -95,15 +99,18 @@
         @include b.bg(80vw, 30vh);
         margin-bottom: 40px;
         flex-direction: column;
-        &:nth-child(1){
+
+        &:nth-child(1) {
             margin-top: 60px;
         }
-        & p{
+
+        & p {
             color: b.$white;
             font-family: b.$font2;
             font-size: 10px;
             margin-top: 5px;
         }
+
         & img {
             width: 90%;
             height: auto;
@@ -121,25 +128,28 @@
     & .feature-p {
         @include b.description(18px);
     }
-    & .btn{
+
+    & .btn {
         margin-top: 50px;
     }
 }
 
-.cards{
+.cards {
     @include b.flex;
     flex-direction: column;
 }
 
-.get-card{
+.get-card {
     @include b.flex;
     flex-direction: column;
-    .img{
+
+    .img {
         @include b.flex;
         @include b.bg(80vw, 30vh);
         margin-bottom: 40px;
         flex-direction: column;
-        & img{
+
+        & img {
             width: 90%;
             height: auto;
             max-width: 280px;
@@ -147,10 +157,12 @@
             border-radius: 61% 39% 28% 72% / 24% 59% 41% 76%;
         }
     }
-    .form-head{
+
+    .form-head {
         @include b.title(18px);
     }
-    .mail{
+
+    .mail {
         height: 25px;
         width: 80%;
         background-color: transparent;
@@ -160,57 +172,75 @@
         outline: none;
         margin-top: 30px;
     }
-    .btn{
+
+    .btn {
         @include b.flex;
-        font-size: 20px;
+        font-size: 16px;
         letter-spacing: 1px;
         text-decoration: none;
         color: b.$white;
         font-family: b.$font1;
         margin-top: 30px;
-        &:hover{
+
+        &:hover {
             background: #EAE0D5;
             box-shadow: inset 10px 10px 12px #a69f97,
-                        inset -10px -10px 12px #ffffff;
-            
+                inset -10px -10px 12px #ffffff;
+
             color: b.$secondary;
-        }       
+        }
     }
+
     margin-bottom: 80px;
 }
 
-#contact{
+#contact {
     background-color: b.$primary;
     text-align: center;
     clip-path: polygon(51% 0, 100% 13%, 100% 100%, 0 100%, 0 13%);
-    .container{
+
+    .container {
         height: 300px;
         width: 100vw;
         @include b.center;
         @include b.flex;
         flex-direction: column;
         justify-content: space-around;
-        .logo{
+
+        .logo {
             margin: 25px 0;
             font-size: 30px;
-            
+
         }
-        .footer-p{
+
+        .footer-p {
             @include b.title(15px);
         }
-        .social{
+
+        .social {
             width: 60%;
             @include b.flex;
             justify-content: space-around;
-            & .icon{
+
+            & .icon {
                 cursor: pointer;
                 fill: b.$secondary;
             }
         }
-        .copy{
+
+        .copy {
             font-size: 10px;
             color: b.$secondary;
             font-family: b.$font2;
+        }
+
+        .btn {
+            width: 150px;
+            height: 30px;
+
+            a {
+                font-size: 12px;
+            }
         }
     }
 }
