--- a/src/scss/mobile/_layout.scss
+++ b/src/scss/mobile/_layout.scss
@@ -1,9 +1,16 @@
-@use '../base' as b;
-@use '../components' as c;
+@use '../base'as b;
+@use '../components'as c;
 @forward '../layout';
- 
+
 @media (min-width: 480px) {
-         .logo{
-             @include b.logo(24px);
-         }
+    .logo {
+        @include b.logo(28px);
+    }
+    .card{
+        width: 70vw;
+        .apply-p{
+            font-size: 18px;
+        }
+    }
+   
 }
