--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -12,6 +12,7 @@
     background: linear-gradient(145deg, #faf0e4, #d3cac0);
     box-shadow:  6px 6px 12px #d5ccc2,
                  -6px -6px 12px #fff4e8;
+    cursor: pointer;
     .menu-line{
         position: absolute;
         top: 7px;
