--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -172,7 +172,10 @@
         outline: none;
         margin-top: 30px;
     }
-
+.input-form{
+    @include b.flex;
+    flex-direction: column;
+}
     .btn {
         @include b.flex;
         font-size: 16px;
@@ -210,7 +213,6 @@
         .logo {
             margin: 25px 0;
             font-size: 30px;
-
         }
 
         .footer-p {
