--- a/src/css/style.css
+++ b/src/css/style.css
@@ -151,6 +151,46 @@ body {
   font-size: 16px;
 }
 
+.appear {
+  transition: all 0.8s;
+  opacity: 0;
+  transform: translateY(30px);
+}
+.appear.inview {
+  opacity: 1;
+  transform: none;
+}
+.appear.inview:nth-child(1) {
+  transition-delay: 0.2s;
+}
+.appear.inview:nth-child(2) {
+  transition-delay: 0.4s;
+}
+.appear.inview:nth-child(3) {
+  transition-delay: 0.6s;
+}
+.appear.inview:nth-child(4) {
+  transition-delay: 0.8s;
+}
+.appear.inview:nth-child(5) {
+  transition-delay: 1s;
+}
+.appear.inview:nth-child(6) {
+  transition-delay: 1.2s;
+}
+.appear.inview:nth-child(7) {
+  transition-delay: 1.4s;
+}
+.appear.inview:nth-child(8) {
+  transition-delay: 1.6s;
+}
+.appear.inview:nth-child(9) {
+  transition-delay: 1.8s;
+}
+.appear.inview:nth-child(10) {
+  transition-delay: 2s;
+}
+
 .logo {
   margin: 10px 20px;
   font-size: 24px;
