--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -1,7 +1,7 @@
-@use 'base' as b;
+@use 'base'as b;
 
 
-.berger{
+.berger {
     position: fixed;
     z-index: 500;
     top: 4%;
@@ -10,10 +10,11 @@
     height: 40px;
     border-radius: 15px;
     background: linear-gradient(145deg, #faf0e4, #d3cac0);
-    box-shadow:  6px 6px 12px #d5ccc2,
-                 -6px -6px 12px #fff4e8;
+    box-shadow: 6px 6px 12px #d5ccc2,
+        -6px -6px 12px #fff4e8;
     cursor: pointer;
-    .menu-line{
+
+    .menu-line {
         position: absolute;
         top: 7px;
         right: 8px;
@@ -22,29 +23,36 @@
         background-color: b.$tertiary;
         border-bottom: 2px solid #d3cac0;
         transition: all ease .5s;
-        &.line2{
+
+        &.line2 {
             top: 18px;
             width: 35%;
         }
-        &.line3{
+
+        &.line3 {
             top: 28px;
             width: 35%;
         }
     }
-   &.click{
-    border-radius: 15px;
-    background: linear-gradient(145deg, #d3cac0, #faf0e4);
-    box-shadow:  6px 6px 12px #d5ccc2,
-                 -6px -6px 12px #fff4e8;
-        .menu-line{
-            width: 70%; 
-            &.line1{
+
+    &.click {
+        border-radius: 15px;
+        background: linear-gradient(145deg, #d3cac0, #faf0e4);
+        box-shadow: 6px 6px 12px #d5ccc2,
+            -6px -6px 12px #fff4e8;
+
+        .menu-line {
+            width: 70%;
+
+            &.line1 {
                 transform: translateY(11px) rotate(135deg);
             }
-            &.line2{
+
+            &.line2 {
                 transform: translateX(-17px) scaleX(0);
             }
-            &.line3{
+
+            &.line3 {
                 transform: translateY(-11px) rotate(-135deg);
             }
         }
@@ -52,85 +60,111 @@
 }
 
 
-.btn{
+.btn {
     position: relative;
     width: 180px;
     height: 45px;
     border: none;
     border-radius: 30px;
     background: linear-gradient(145deg, #b9a083, #dcbe9c);
-    box-shadow:  6px 6px 12px #8c7963,
-                 -6px -6px 12px #ffebc1;
+    box-shadow: 6px 6px 12px #8c7963,
+        -6px -6px 12px #ffebc1;
     cursor: pointer;
-    & a{
+
+    & a {
         font-size: 16px;
         letter-spacing: 1px;
         text-decoration: none;
         color: b.$white;
         font-family: b.$font1;
     }
-    &:hover{
+
+    &:hover {
         background: #EAE0D5;
         box-shadow: inset 10px 10px 12px #a69f97,
-                    inset -10px -10px 12px #ffffff;
-        & a{
-        color: b.$secondary;
+            inset -10px -10px 12px #ffffff;
+
+        & a {
+            color: b.$secondary;
         }
     }
 }
 
-.titles{
+.titles {
     @include b.flex;
     flex-direction: column;
+
     .title {
         @include b.title(30px);
         margin: 110px 0 10px 0;
         text-align: center;
     }
 
-.title-line{
-    width: 80px;
-    height: 2px;
-    background-color: b.$tertiary;
-    margin-bottom: 70px;
-}
+    .title-line {
+        width: 80px;
+        height: 2px;
+        background-color: b.$tertiary;
+        margin-bottom: 70px;
+    }
 }
 
-.card{
+.card {
     @include b.flex;
     flex-direction: column;
     @include b.bg(80vw, 40vh);
     margin-bottom: 70px;
 
-    .bg{
+    .bg {
         position: relative;
         width: 70px;
         height: 70px;
         background-color: b.$white;
-        border-radius: 41% 59% 23% 77% / 59% 54% 46% 41%; 
-        & .icon{
-          position: absolute;
-          width:35px;
-          height: 35px;
-          top: 50%;
-          left: 50%;  
-          transform: translate(-50%, -50%);
-           fill: b.$secondary;
+        border-radius: 41% 59% 23% 77% / 59% 54% 46% 41%;
+
+        & .icon {
+            position: absolute;
+            width: 35px;
+            height: 35px;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            fill: b.$secondary;
         }
     }
-    .apply-title{
+
+    .apply-title {
         @include b.title(23px);
         letter-spacing: 2.5px;
         margin: 40px 0 30px 0;
     }
-    .apply-p{
+
+    .apply-p {
         @include b.description(16px);
         padding: 0 20px;
         text-align: center;
         line-height: 1.5rem;
-        &:nth-child(1){
+
+        &:nth-child(1) {
             font-size: 16px;
         }
     }
-   
+
+}
+
+
+.appear {
+    transition: all 0.8s;
+    opacity: 0;
+    transform: translateY(30px);
+
+    &.inview {
+        opacity: 1;
+        transform: none;
+
+        @for $i from 1 through 10 {
+            &:nth-child(#{$i}) {
+                transition-delay: $i * 0.2s;
+            }
+        }
+    }
 }
