--- a/src/css/style.css
+++ b/src/css/style.css
@@ -323,23 +323,30 @@ body {
   max-width: 280px;
   border-radius: 83% 17% 73% 27%/25% 46% 54% 75%;
 }
-.left .feature-head,
-.right .feature-head {
+.left .text,
+.right .text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.left .text .feature-head,
+.right .text .feature-head {
   font-size: 24px;
   font-family: "Baloo 2", cursive;
   font-weight: bold;
   color: #5E503F;
   margin-bottom: 20px;
 }
-.left .feature-p,
-.right .feature-p {
+.left .text .feature-p,
+.right .text .feature-p {
   font-size: 18px;
   font-family: "Roboto", sans-serif;
   color: #5E503F;
   font-weight: 280;
 }
-.left .btn,
-.right .btn {
+.left .text .btn,
+.right .text .btn {
   margin-top: 50px;
 }
 
