--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -119,7 +119,10 @@
 
         }
     }
-
+   & .text{
+    @include b.flex;
+    flex-direction: column;
+    
     & .feature-head {
         @include b.title(24px);
         margin-bottom: 20px;
@@ -132,6 +135,7 @@
     & .btn {
         margin-top: 50px;
     }
+}
 }
 
 .cards {
